--- a/superformula-frontend/public/index.html
+++ b/superformula-frontend/public/index.html
@@ -26,6 +26,7 @@
             rel="stylesheet"
             type="text/css"
         />
+        <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet" />
         <title>React App</title>
     </head>
     <body>
