--- a/superformula-frontend/.storybook/preview-head.html
+++ b/superformula-frontend/.storybook/preview-head.html
@@ -3,3 +3,4 @@
     rel="stylesheet"
     type="text/css"
 />
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet" />
