--- a/superformula-frontend/public/index.html
+++ b/superformula-frontend/public/index.html
@@ -27,7 +27,7 @@
             type="text/css"
         />
         <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet" />
-        <title>React App</title>
+        <title>User Management</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
